Prefixes powerschool specific models with Ps to make the code more readable and avoid needing fully qualified paths in the ETLEngine.  Makes ETLEngine.staff and courses maps of maps instead of maps of lists to avoid O(n) lookups during migration.